# phat-contract-examples

./: Cargo.toml  README.md  lib.rs  rust-toolchain.toml
candlelight-auction/: README.md  lib.rs
examples/candlelight-auction/: Cargo.toml  lib.rs
examples/phat-auction/: Cargo.toml  lib.rs
examples/phat-eth/: Cargo.toml  transaction.rs
examples/phat-gm/: Cargo.toml  lib.rs  transaction.rs
examples/phat-rpc/: Cargo.toml  PhatRPC.md  README.md  era.rs  lib.rs  transaction.rs
examples/phat-s3/: Cargo.toml  README.md  lib.rs
examples/roshambo/: README.md
examples/subgraph-nouns/: Cargo.toml  README.md  lib.rs
phat-auction/: Cargo.toml  lib.rs
roshambo/: Cargo.toml  lib.rs
scripts/js/src/: e2e.js  e2eGM.js
utils/: Cargo.toml
utils/src/: lib.rs
