[package]
name = "phat-auction"
version = "0.1.0"
authors = ["Joshua <hashwarlock@phala.network>"]
edition = "2021"
rust-version = "1.56.1"

[dependencies]
ink_primitives = { version = "3.0.0", default-features = false }
ink_metadata = { version = "3.0.0", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "3.0.0", default-features = false }
ink_storage = { version = "3.0.0", default-features = false }
ink_lang = { version = "3.0.0", default-features = false }
ink_prelude = { version = "3.0.0", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive", "full"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }

pink-extension = { version = "0.1.5", default-features = false }
safe-regex = { version = "0.2.5", default-features = false }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
serde = { version = "1.0.136", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

[lib]
name = "phat_auction"
path = "lib.rs"
crate-type = [
	# Used for normal contract Wasm blobs.
	"cdylib",
]

# Needed until https://github.com/paritytech/ink/issues/364 is resolved.
[profile.release]
overflow-checks = false

[features]
default = ["std"]
std = [
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_primitives/std",
    "scale/std",
    "scale-info/std",
    "pink-extension/std",
    "serde/std",
    "serde_json/std",
]
ink-as-dependency = []
