[package]
name = "phat-rpc"
version = "0.1.0"
authors = ["Joshua <hashwarlock@phala.network>"]
edition = "2021"
rust-version = "1.56.1"

[dependencies]
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive", "full"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }

ink_prelude = { version = "3.0.0-rc9", default-features = false }
ink_lang = { version = "3.0.0-rc9", default-features = false }
ink_storage = { version = "3.0.0-rc9", default-features = false }
ink_env = { version = "3.0.0-rc9", default-features = false }
ink_metadata = { version = "3.0.0-rc9", default-features = false, features = ["derive"], optional = true }
ink_primitives = { version = "3.0.0-rc9", default-features = false }
pink-extension = { version = "0.1.5", default-features = false }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
serde = { version = "1.0.137", default-features = false, features = ["derive", "alloc"]}
serde-json-core = { version = "0.4.0" }

[lib]
name = "phat_rpc"
path = "lib.rs"
crate-type = [
    # Used for normal contract Wasm blobs.
    "cdylib",
]
# Needed until https://github.com/paritytech/ink/issues/364 is resolved.
[profile.release]
overflow-checks = false

[features]
default = ["std"]
std = [
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_primitives/std",
    "scale/std",
    "scale-info/std",
    "pink-extension/std",
    "serde-json-core/std",
]
ink-as-dependency = []
